--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -138,7 +138,6 @@
     display: flex;
     height: 100%;
     width: 100%;
-    background-color: rgba(33, 37, 41, 0.2);
     color: #fff;
     position: absolute;
     top: 0;
@@ -181,6 +180,12 @@ h3{
     margin-bottom: 1.5rem;
     padding-right: 15px;
     padding-left: 15px;
-  }
+}
+
+.flex-item a:hover .caption{
+  background-color: #5aa998;
+  transform: scale(0.9);
+}
+
 
 
